# agentd

./: .gitignore  README.md  agentd_tui.py  app.py  pyproject.toml
agentd/: app.py  config.py  patch.py  rewrite.py  section_chunker.py  subscriptions.py  tool_util.py
agentd/editors/: section_based_editor.py  section_based_prompts.py
agentd/model/: config.py
agentd/models/: message.py
agentd/ui/: agentd_tui.py  assistant_util.py
config/: facts.yaml  filesystem.yaml  ycombinator-config.yaml
test/: test_patch.py
tests/: test_apply_edits.py  test_assistant_integration.py
tools/: done_tool.py
