[project]
name = "agentd"
version = "0.1.0"
description = "agent daemon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp-subscribe",
    "openai>=1.76.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentd/"]


[project.scripts]
agentd = "agentd.app:main"
